add Main class and fix problems